examples/shop/email/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: email
  labels:
    istio.io/rev: asm-managed
